--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
   <script src="app.js" defer></script>
 </head>
 <body>
-  <div id="todo-content">
-    <input type="text" class="form-todo" id="todoInput">
-    <button id="btnTodo">Add todo</button>
-  </div>
-  <ul id="todoList" class="todo">
-
-  </ul>
+  <div class="fruits"></div>
+  <div class="cart"></div>
+  <div class="info"></div>
+  <div id="cart-total-value"></div>
 </body>
 </html>
